<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/recharge_dialog_detail"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_18" />

        <ImageView
            android:id="@+id/recharge_dialog_right"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            android:src="@drawable/baseline_keyboard_arrow_right_black_48" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg" />

    <TextView
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:text="@string/recharge_dialog_choose"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/line_bg" />

    <LinearLayout
        android:id="@+id/dialog_my_wallet"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical">


        <ImageView

            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/money" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/recharge_dialog_mywallet" />

            <TextView
                android:id="@+id/dialog_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="2"
                android:gravity="top"
                android:text="可用余额：1000.00"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/recharge_wallet_cb"
            android:layout_width="@dimen/dp_25"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_25"
            android:src="@drawable/check_circle"
            android:visibility="visible" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/line_bg" />

    <LinearLayout
        android:id="@+id/dialog_zhifubao"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/zhifubao" />

        <TextView
            android:id="@+id/dialog_zhifubao_tv"
            android:layout_width="0dp"

            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/recharge_dialog_zhifubao" />

        <ImageView
            android:id="@+id/recharge_zhifubao_cb"
            android:layout_width="@dimen/dp_25"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_25"
            android:src="@drawable/check_circle"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/line_bg" />

    <LinearLayout
        android:id="@+id/dialog_wechat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            app:srcCompat="@drawable/wechat_pay"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/dialog_wechat_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/recharge_dialog_wechat" />

        <ImageView
            android:id="@+id/recharge_wechat_cb"
            android:layout_width="@dimen/dp_25"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_25"
            android:src="@drawable/check_circle"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/line_bg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center_vertical"
        android:minWidth="130dp"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_dialog_need" />

        <TextView
            android:id="@+id/recharge_num"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_25"
            android:gravity="center"
            android:text="$ 100.00"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_confirm_pay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/recharge_dialog_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />
</LinearLayout>